# learn-to-speak

./: .gitignore  CMakeLists.txt  README.md  README.txt  basic_test.py  build.sh  experiment1.py  hmm.py  lpchmm.py  lpchmm_test_script.py  plotter-play.py  setup_pyraat.sh
analysis/: DFA_preprocess_speech.m  DFA_preprocess_stubart.m  DFA_preprocess_tub.m  DFA_preprocess_tubart.m  calc_view_fact.m  import_datalog.m  import_sound.m  jdb_subspace_method.m  mtit.m  my_spectrogram.m  pre_process_speech.m  record_speech.m  subspace_method.m  tight_subplot.m  tract_movie.m  verify_prims.m  view_prim_image.m  visual_tract.m  visual_tract_revised.m
analysis/functions/: ICA.m  NMF.m  PCA.m  SubspaceDFA.m
analysis/manifolds/: ISOMAP.m  MFCC.m  MelFilters.m  PairwiseLPC.m  PairwiseNorm.m  WindowReshape.m  script_ConcatenateLocalManifoldAudio.m  symmetricLPC.m  timit_ISOMAP.m
app/: VocalTract.xml  ymanager.ini
docs/: OSX_install.rtf  TODO_cpp_to_py_checks.rtf
lpchmm/: basic_hmm.py  cn_data.txt  plot_results.py
python/: DataHandler.py  K_O_figures.py  RandExp.py  SubspacePrim.py  Utterance.py  apa.py  art_control.py  art_learn.py  art_q_learn.py  articulatory_learn.py  articutory_control.py  artprim_random.py  artprim_sfv.py  artprim_step_inputs.py  batch_learn.py  batch_learn_art.py  batch_learn_mfcc.py  continuous_learn.py  convergence_plot.py  eval_prims_ipa.py  eval_prims_mfcc.py  example_figures.py  fixed_target.py  fixed_target_plot.py  generate_data.py  generate_data.sh  generate_step_inputs.py  input_output_figures.py  learn_immitation.py  learn_reference_control.py  mfcc_clusters.py  mfcc_play.py  plot_functions.py  preprocess_acoustic_io.py  preprocess_primitive_io.py  prim_rand_excite.py  primitive_gui.py  random_gesture.py  run_batch.sh  single_factor_control.py  (+5 more)
python/_archive/: art_control.py  art_learn.py  art_q_learn.py  di_du_figures.py  estimate_rank.py  example_figures.py  feedback.npz  generate_step_inputs.py  input_regression.py  learn_reference_control.py  structured_randexp.py  system_id_test.py
python/config/: constants.py
python/control_sequences/: d0.csv  d1.csv  d2.csv  d_all.csv  d_steps.csv  dx.csv  simple_control.csv
python/features/: ArtFeatures.py  BaseFeatures.py  SpectralAcousticFeatures.py  functions.py
python/genfigures/: ch4_audible_trajectories.py  ch4_enegetic_states.py  ch4_energy_plot.py  ch4_factor_variation.py  ch4_lqr_plots.py  ch4_mfcc_vs_state_distance.py  ch4_qlearning_plots.py  covariance.npz  eval_prims_ipa.py  fixed_target_plot.py  operator_figures.py  plot_functions.py  primitive_stats.py
python/learners/: Learner.py
python/primitive/: ActionSequence.py  BaseObject.py  DataHandler.py  IncrementalDFA.py  PrimitiveControl.py  PrimitiveHandler.py  PrimitiveUtterance.py  RandExcite.py  RandExp.py  RandomArtword.py  SubspaceDFA.py  SubspacePrim.py  Utterance.py
python/utterance/: RandExp.py  Utterance.py
python/utterances/: apa.py  click.py  ejective.py  ipa101.py  ipa132.py  ipa134.py  ipa140.py  ipa142.py  ipa301.py  ipa304.py  ipa305.py  ipa316.py  prm_3d.py  sigh.py
scripts/: CMakeLists.txt  brownian_gesture.cpp  prim_control.cpp  rand_gesture.cpp
src/: CMakeLists.txt
src/scripts/: CMakeLists.txt  functions.cpp  functions.h  rand_brownian.cpp  rand_gesture.cpp
src/vt-model/: Articulation_enums.h  Artword.cpp  Artword.h  BasePrimControl.cpp  BasePrimControl_jdb.cpp  CMakeLists.txt  Delta.h  RandomStim.cpp  Sound.cpp  Speaker.cpp  Speaker.h  Speaker_def.h  VocalTract.cpp
src/vt-model/vt-model.xcodeproj/: project.pbxproj.orig
src/yarpsim/: CMakeLists.txt  DataLogger.cpp  YarpDriver.cpp  YarpWrapper.cpp  YarpWrapper2.cpp
tensorflow/: data_loader.py  double_pendulum.py  helper_functions.py  learn_inverse.py  learn_pendulum.py  mfcc_norm.npz  mnist_autoencoder.py  mnist_cluster_vis.py  mnist_eval.py  mnist_highdim_cluster_vis.py  mnist_highdim_eval.py  mnist_highdim_test.py  mnist_test.py  mnist_vae.py  prim_norm.npz  primitive_foward_eval.py  primitive_symbol_rate.py  primitive_test.py  process_forward_models.sh  speech_channel_eval.py  speech_forward_eval.py  speech_test.py  tf_play.py
tensorflow/archive/: double_pendulum.py  learn_pendulum.py
tensorflow/autoencoder/: 3  autoencoder.py  chae.py  neural_network.py  pendulum_vae.py  primitive_vae.py  pyraat_vae.py  tensorflow_utilities.py  test_script.py  vae.py  vae_mnist.py  vae_mnist_distort.py
tensorflow/pendulum_train/: batch_0.npz  batch_1.npz  batch_10.npz  batch_11.npz  batch_12.npz  batch_13.npz  batch_14.npz  batch_15.npz  batch_16.npz  batch_17.npz  batch_18.npz  batch_19.npz  batch_2.npz  batch_20.npz  batch_21.npz  batch_22.npz  batch_23.npz  batch_24.npz  batch_25.npz  batch_26.npz  (+80 more)
vt-model/: Articulation_enums.h  Artword.cpp  Artword.h  ArtwordControl.cpp  ArtwordControl.h  BasePrimControl.cpp  BasePrimControl.h  BrownianStim.cpp  BrownianStim.h  CMakeLists.txt  Control.h  Delta.h  RandomStim.cpp  RandomStim.h  Sound.cpp  Sound.h  Speaker.cpp  Speaker.h  VocalTract.cpp  VocalTract.h  YarpDriver.cpp  YarpWrapper.cpp  main.cpp  setup.py
vt-model/vt-model/: Art_Speaker.cpp  Art_Speaker.h  Art_Speaker_Delta.cpp  Art_Speaker_Delta.h  Articulation.h  Articulation_enums.h  Artword.cpp  Artword.h  Artword_Speaker_to_Sound.cpp  Artword_Speaker_to_Sound.h  Artword_def.h  CMakeLists.txt  Delta.cpp  Delta.h  Sound.cpp  Sound.h  Speaker.cpp  Speaker.h  Speaker_def.h  Speaker_to_Delta.cpp  Speaker_to_Delta.h  VocalTract.cpp  VocalTract.h  import_datalog.m  main.cpp  support_functions.cpp  support_functions.h
vt-model/vt-model.xcodeproj/: project.pbxproj
vt-model/vt-model.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
vt-model/vt-model.xcodeproj/project.xcworkspace/xcuserdata/JacobWagner.xcuserdatad/: UserInterfaceState.xcuserstate
vt-model/vt-model.xcodeproj/xcuserdata/JacobWagner.xcuserdatad/xcschemes/: vt-model.xcscheme  xcschememanagement.plist
vt-model/vt-model/analysis/: import_datalog.m  import_sound.m  my_spectrogram.m  pre_process_speech.m  subspace_method.m
vt-yarpsim/: CMakeLists.txt  YarpDriver.cpp  YarpWrapper.cpp
(+226 files in other folders)
